--- a/css/default.css
+++ b/css/default.css
@@ -17,7 +17,7 @@ body {
     padding: 0;
 }
 
-.container {
+.article {
     width: 100%;
     padding-left: 15px;
     padding-right: 15px;
@@ -25,6 +25,16 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+  /* Firefox */
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
 
 @media (min-width: 1200px) {
     .container { max-width: 1140px;}
