--- a/css/default.css
+++ b/css/default.css
@@ -9,14 +9,14 @@
 body {
     font-family: "Open Sans", sans-serif;
     font-weight: 400;
-    font-size: 0.875rem;
+    font-size: 16px;
     line-height: 1.6;
     letter-spacing: 0;
     color: var(--font-color-base);
-    margin: 0;
-    padding: 0;
+    
 }
-
+i {  font-size:large;}
+.glyphicon { font-size: large;}
 .article {
     width: 100%;
     padding-left: 15px;
@@ -25,7 +25,7 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-
+article { color: var(--font-color-base); }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -36,6 +36,4 @@ input::-webkit-inner-spin-button {
     -moz-appearance: textfield;
   }
 
-@media (min-width: 1200px) {
-    .container { max-width: 1140px;}
-}
+           
